# MonitorBot

./: .pylintrc  Dockerfile.code  MANIFEST.in  Makefile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
monitorbot/: __init__.py  __main__.py  monitorbot.py
