[versioneer]
VCS = git
style = pep440
versionfile_source = monitorbot/_version.py
versionfile_build = monitorbot/_version.py
tag_prefix = v
parentdir_prefix = monitorbot-

[metadata]
description-file = README.md

[flake8]
max-line-length = 100
ignore = F841   # Local variable name is assigned to but never used.
exclude =
    .git,
    venv*,
    versioneer.py,
    monitorbot/_version.py,
    setup.py
    doc

[tool:pytest]
testpaths = monitorbot
docstyle_convention = numpy
docstyle_add_ignore = D401
codestyle_max_line_length = 100

[mypy]
ignore_missing_imports=True
no_implicit_optional=True

[mypy-monitorbot._version]
ignore_errors=True
